Fix nav elements jumping

--- a/assets/scss/partials/navigation/_main.scss
+++ b/assets/scss/partials/navigation/_main.scss
@@ -87,10 +87,10 @@ $nav-mobile-height: 70px;
 
         .right-menu {
             .nav-item {
+                width: 24px;
                 border: none;
                 color: $blue-8;
                 line-height: 0;
-                max-width: 24px;
                 max-height: 24px;
                 position: relative;
                 margin-right: 22px;
